--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,16 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-core</artifactId>
+        <version>10.1.25</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-function-context</artifactId>
+        <version>4.1.2</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
