--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-mongodb</artifactId>
+      <version>3.1.8</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
