chore: update mongodb dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
       <artifactId>aspectjweaver</artifactId>
       <version>1.9.22</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+      <version>3.1.1</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
@@ -132,27 +137,6 @@
         <version>2023.0.0</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongodb-driver-sync</artifactId>
-        <version>4.9.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>bson</artifactId>
-        <version>4.9.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongodb-driver-core</artifactId>
-        <version>4.9.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>bson-record-codec</artifactId>
-        <version>4.9.1</version>
-        <scope>runtime</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
