--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-stream</artifactId>
+        <version>4.1.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
