chore: update dependency

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -9,11 +9,11 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "256Mi"
-      cpu: "40m"
+      memory: "512Mi"
+      cpu: "200m"
     limits:
-      memory: "4Gi"
-      cpu: "300m"
+      memory: "512Mi"
+      cpu: "400m"
 
   autoscaling:
     enable: true
@@ -34,6 +34,7 @@ microservice-chart:
 
   envSecret:
     aks-api-url: cstar-d-weu-dev01-aks-apiserver-url
+    APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-instrumentation-key
 
   keyvault:
     name: "cstar-d-idpay-kv"
