--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,7 +31,7 @@ logging:
 
 management:
   health:
-    mongo.enabled: ${HEALTH_MONGO_ENABLED:false}
+    mongo.enabled: ${HEALTH_MONGO_ENABLED:true}
   endpoint:
     health:
       probes.enabled: true
