--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,7 +6,7 @@ microservice-chart:
   livenessProbe:
     handlerType: httpGet
     httpGet:
-      path: /actuator/health
+      path: /actuator/health/liveness
       port: 8080
     initialDelaySeconds: 120
     failureThreshold: 15
@@ -15,7 +15,7 @@ microservice-chart:
   readinessProbe:
     handlerType: httpGet
     httpGet:
-      path: /actuator/health
+      path: /actuator/health/readiness
       port: 8080
     initialDelaySeconds: 120
     failureThreshold: 15
@@ -62,6 +62,7 @@ microservice-chart:
     IS_IBAN_FORMAL_CONTROL_ACTIVE: "false"
     DELETE_PAGINATION_SIZE: "100"
     DELETE_DELAY_TIME: "1000"
+    HEALTH_MONGO_ENABLED: "false"
 
   externalConfigMapValues:
     idpay-common:
