--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -9,10 +9,10 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "150m"
     limits:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "600m"
 
   autoscaling:
@@ -28,7 +28,23 @@ microservice-chart:
           value: "70"
 
   envConfig:
-    JAVA_TOOL_OPTIONS: "-Xms256m -Xmx512m -Djava.util.concurrent.ForkJoinPool.common.parallelism=7 -Dio.netty.eventLoopThreads=100 -javaagent:/app/applicationinsights-agent.jar -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json -agentlib:jdwp=transport=dt_socket,server=y,address=8001,suspend=n -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.port=3002 -Dcom.sun.management.jmxremote.rmi.port=3003 -Djava.rmi.server.hostname=127.0.0.1 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false"
+    JAVA_TOOL_OPTIONS: >-
+      -XX:InitialRAMPercentage=75.0
+      -XX:MaxRAMPercentage=85.0
+      -XX:+UseG1GC
+      -XX:+UseContainerSupport
+      -Djava.security.egd=file:/dev/./urandom
+      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7 
+      -Dio.netty.eventLoopThreads=100
+      -javaagent:/app/applicationinsights-agent.jar 
+      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json 
+      -agentlib:jdwp=transport=dt_socket,server=y,address=8001,suspend=n 
+      -Dcom.sun.management.jmxremote=true 
+      -Dcom.sun.management.jmxremote.port=3002 
+      -Dcom.sun.management.jmxremote.rmi.port=3003 
+      -Djava.rmi.server.hostname=127.0.0.1 
+      -Dcom.sun.management.jmxremote.authenticate=false 
+      -Dcom.sun.management.jmxremote.ssl=false
     INITIATIVE_LOGO_URL: "https://idpaydinitiativestorage.blob.core.windows.net/logo/"
     IS_IBAN_FORMAL_CONTROL_ACTIVE: "false"
 
