--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -9,10 +9,10 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "150m"
     limits:
-      memory: "768Mi"
+      memory: "1Gi"
       cpu: "600m"
 
   autoscaling:
@@ -28,7 +28,16 @@ microservice-chart:
           value: "70"
 
   envConfig:
-    JAVA_TOOL_OPTIONS: "-Xms256m -Xmx512m -Djava.util.concurrent.ForkJoinPool.common.parallelism=7 -Dio.netty.eventLoopThreads=100 -javaagent:/app/applicationinsights-agent.jar -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json"
+    JAVA_TOOL_OPTIONS: >-
+      -XX:InitialRAMPercentage=75.0
+      -XX:MaxRAMPercentage=85.0
+      -XX:+UseG1GC
+      -XX:+UseContainerSupport
+      -Djava.security.egd=file:/dev/./urandom
+      -Djava.util.concurrent.ForkJoinPool.common.parallelism=7
+      -Dio.netty.eventLoopThreads=100 
+      -javaagent:/app/applicationinsights-agent.jar
+      -Dapplicationinsights.configuration.file=/mnt/file-config-external/appinsights-config/applicationinsights.json
     INITIATIVE_LOGO_URL: "https://idpaypinitiativestorage.blob.core.windows.net/logo/"
     IS_IBAN_FORMAL_CONTROL_ACTIVE: "true"
 
