--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Add the repository's code owners here
-* @pagopa/idpay-approver-team @dariopelliccioli
+* @pagopa/idpay-app-maintainer-team @pagopa/idpay-approver-team @dariopelliccioli
