--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,9 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.3</version>
+    <version>3.5.6</version>
   </parent>
+
 
   <groupId>it.gov.pagopa.wallet</groupId>
   <artifactId>idpay-wallet</artifactId>
@@ -17,6 +18,7 @@
 
   <properties>
     <java.version>21</java.version>
+    <argLine>-Duser.timezone=Europe/Rome</argLine> <!-- placeholder to make works both the remote pipeline with sonar cloud and locally -->
   </properties>
 
   <dependencies>
@@ -64,7 +66,6 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.30</version>
     </dependency>
     <dependency>
       <groupId>io.github.openfeign</groupId>
@@ -74,28 +75,14 @@
     <dependency>
       <groupId>org.codehaus.janino</groupId>
       <artifactId>janino</artifactId>
-      <version>3.1.11</version>
     </dependency>
 
     <!-- Security fixes -->
-    <dependency>
-      <groupId>org.xerial.snappy</groupId>
-      <artifactId>snappy-java</artifactId>
-      <!-- Forced to > 1.1.10.3 due to https://nvd.nist.gov/vuln/detail/CVE-2023-34453 -->
-      <version>1.1.10.5</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
       <!-- Forced to > 4.11.0 in order to update dependency of okio -->
       <version>4.12.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.yaml</groupId>
-      <artifactId>snakeyaml</artifactId>
-      <!-- Forced to > 2.0 due to https://nvd.nist.gov/vuln/detail/CVE-2022-1471 -->
-      <version>2.2</version>
     </dependency>
 
     <!--TEST-->
@@ -132,7 +119,7 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>2023.0.2</version>
+        <version>2025.0.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -152,11 +139,6 @@
         <version>2.17.0</version>
       </dependency>
       <dependency>
-        <groupId>io.netty</groupId>
-        <artifactId>netty-handler</artifactId>
-        <version>4.1.118.Final</version>
-      </dependency>
-      <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId>tomcat-embed-core</artifactId>
         <version>10.1.42</version>
@@ -174,7 +156,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.3</version>
         <configuration>
           <argLine>@{argLine} -Duser.timezone=Europe/Rome</argLine>
         </configuration>
