--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
       <dependency>
         <groupId>net.minidev</groupId>
         <artifactId>json-smart</artifactId>
-        <version>2.5.2</version>
+        <version>20230227</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
