--- a/pom.xml
+++ b/pom.xml
@@ -131,14 +131,9 @@
         <version>2.17.0</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.tomcat.embed</groupId>
-        <artifactId>tomcat-embed-core</artifactId>
-        <version>10.1.42</version>
-      </dependency>
-      <dependency>
         <groupId>net.minidev</groupId>
         <artifactId>json-smart</artifactId>
-        <version>2.5.2</version>
+        <version>20230227</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
