--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
       <version>4.11.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20230227</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
