using the expiringDay parameter

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -300,7 +300,7 @@ spring:
   data:
     mongodb:
       uri: ${MONGODB_URI:mongodb://localhost:27017}
-      database: ${MONGODB_DBNAME:idpay}
+      database: ${MONGODB_DBNAME:idpay-beneficiari}
       # custom configured properties
       config:
         connectionPool:
