--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -321,5 +321,16 @@ app:
   iban:
     formalControl: ${IS_IBAN_FORMAL_CONTROL_ACTIVE:false}
   wallet:
-    expiringDay: ${WALLET_EXPIRING_DAY:5}
+    expiringDay: ${WALLET_EXPIRING_DAY:3}
     blockReminderBatch: ${BLOCK_REMINDER_BATCH:100}
+
+support:
+  api:
+    key: ${ZENDESK_JWT_SECRET}   # setta una chiave HMAC >= 32 bytes in env/secret
+    zendesk:
+      actionUri: https://pagopa.zendesk.com/access/jwt
+      redirectUri: https://bonus.assistenza.pagopa.it/requests/new
+      organization: _users_hc_bonus
+    defaultProductId: prod-bonus-ed
+server:
+  port: 8080
